fix overflow in article teasers

--- a/src/Components/ArticleTeaser/ArticleTeaser.css
+++ b/src/Components/ArticleTeaser/ArticleTeaser.css
@@ -6,6 +6,7 @@
   background-position: center;
   background-size: cover;
   color: black;  
+  overflow: hidden;
 }
 
 .article-teaser-info {
@@ -15,7 +16,7 @@
   grid-row: 2/3;
   height: 100%;
   background-color: white;
-  background-color:rgba(255,255,255,0.4);
+  background-color:rgba(255,255,255,0.6);
   overflow-wrap: break-word;
 
 }
@@ -25,6 +26,7 @@
   font-size: 100%;
   font-style: italic;
   text-align: center;
+  
 }
 
 @media only screen and (max-width: 900px) {
